# solder

./: Cargo.toml  LICENSE  README.md  build.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: lib.rs
src/: info.rs  lib.rs  macros.rs
src/zend/: internal_php_methods.rs  methods.rs  mod.rs  module.rs  types.rs  zend_methods.rs
