[package]
name = "solder"
version = "0.1.0"
authors = ["Bruno Clemente <bruno.canguru@hotmail.com>"]
keywords = ["php", "php-extension"]
description = "A library to build PHP extensions in Rust."
license = "MIT"
repository = "https://github.com/killertux/solder"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.0"

[lib]
name = "solder"

