[package]
name = "solder"
version = "0.1.5"
authors = ["Bruno Clemente <bruno.canguru@hotmail.com>"]
keywords = ["php", "php-extension", "ffi"]
description = "A library to build PHP extensions using Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/killertux/solder"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.0"

[lib]
name = "solder"

